{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 68,
  "lineage": "551fc1bd-5159-b10c-3e9b-4c735746a6ec",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "basic-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07fd79e9313c7056d",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-0fb64bbc31ba31478",
            "domain": "vpc",
            "id": "eipalloc-07fd79e9313c7056d",
            "network_border_group": "ap-northeast-3",
            "network_interface": "eni-0cbbcea98c925323d",
            "private_dns": "ip-10-0-1-50.ap-northeast-3.compute.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-15-168-95-100.ap-northeast-3.compute.amazonaws.com",
            "public_ip": "15.168.95.100",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.basic-gw",
            "aws_network_interface.basic-nic",
            "aws_security_group.basic-sg",
            "aws_subnet.basic-vpc-subnet-1",
            "aws_vpc.basic-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "basic-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0da13880f921c96a5",
            "arn": "arn:aws:ec2:ap-northeast-3:304203937430:instance/i-09aab84a157d3b0f7",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09aab84a157d3b0f7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "general",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09f37e9a4f8271945",
            "private_dns": "ip-172-31-40-102.ap-northeast-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.40.102",
            "public_dns": "ec2-13-208-102-159.ap-northeast-3.compute.amazonaws.com",
            "public_ip": "13.208.102.159",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07be4155d77b51485",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0137b7fd1df423774",
            "tags": {
              "Name": "web-basic-ec2"
            },
            "tags_all": {
              "Name": "web-basic-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07b851d4bb0a7311a"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "basic-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:304203937430:internet-gateway/igw-0494dd2a3faf71ea7",
            "id": "igw-0494dd2a3faf71ea7",
            "owner_id": "304203937430",
            "vpc_id": "vpc-02a9918ba805a3018"
          },
          "dependencies": [
            "aws_vpc.basic-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "basic-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:304203937430:network-interface/eni-0cbbcea98c925323d",
            "id": "eni-0cbbcea98c925323d",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:0c:f2:c8:2c:e6",
            "owner_id": "304203937430",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0bfb471ee88ce9908"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-021430fe1a3d90e01"
          },
          "dependencies": [
            "aws_security_group.basic-sg",
            "aws_subnet.basic-vpc-subnet-1",
            "aws_vpc.basic-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "basic-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:304203937430:route-table/rtb-01aaf713ae27181fb",
            "id": "rtb-01aaf713ae27181fb",
            "owner_id": "304203937430",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0494dd2a3faf71ea7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "basic-route-table"
            },
            "tags_all": {
              "Name": "basic-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a9918ba805a3018"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.basic-gw",
            "aws_vpc.basic-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "basic-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a55aa8a0a53ffbd7",
            "route_table_id": "rtb-01aaf713ae27181fb",
            "subnet_id": "subnet-021430fe1a3d90e01"
          },
          "dependencies": [
            "aws_internet_gateway.basic-gw",
            "aws_route_table.basic-route-table",
            "aws_subnet.basic-vpc-subnet-1",
            "aws_vpc.basic-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "basic-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:304203937430:security-group/sg-0bfb471ee88ce9908",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bfb471ee88ce9908",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "For Web",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "basic-sg-for-web",
            "name_prefix": "",
            "owner_id": "304203937430",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow_Web"
            },
            "tags_all": {
              "Name": "Allow_Web"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a9918ba805a3018"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.basic-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "basic-vpc-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:304203937430:subnet/subnet-021430fe1a3d90e01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3a",
            "availability_zone_id": "apne3-az3",
            "cidr_block": "10.0.1.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-021430fe1a3d90e01",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "304203937430",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "basic-vpc-subnet-1"
            },
            "tags_all": {
              "Name": "basic-vpc-subnet-1"
            },
            "vpc_id": "vpc-02a9918ba805a3018"
          },
          "dependencies": [
            "aws_vpc.basic-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "basic-vpc-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:304203937430:subnet/subnet-0054246d430765884",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3b",
            "availability_zone_id": "apne3-az1",
            "cidr_block": "10.0.2.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0054246d430765884",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "304203937430",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "basic-vpc-subnet-2"
            },
            "tags_all": {
              "Name": "basic-vpc-subnet-2"
            },
            "vpc_id": "vpc-02a9918ba805a3018"
          },
          "dependencies": [
            "aws_vpc.basic-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "basic-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:304203937430:vpc/vpc-02a9918ba805a3018",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/20",
            "default_network_acl_id": "acl-078201a19ffff537f",
            "default_route_table_id": "rtb-0fb530efc6623e673",
            "default_security_group_id": "sg-02dc1ffa82a01c2ee",
            "dhcp_options_id": "dopt-02a8099a5b7d5b3d8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02a9918ba805a3018",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fb530efc6623e673",
            "owner_id": "304203937430",
            "tags": {
              "Name": "basic-vpc"
            },
            "tags_all": {
              "Name": "basic-vpc"
            }
          }
        }
      ]
    }
  ]
}